# serviceorder-api

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  autoapp.py  cli  db.py  docker-compose.yml  manage.py  pyproject.toml  setup.py
app/: __init__.py  settings.py
app/api/: __init__.py  authentication.py  company.py  intervention.py  messages.py  occurrence.py  order.py  photo.py  product.py  professional.py  responses.py  user.py
app/helpers/: __init__.py
app/models/: user.py
app/models/observers/: user.py
app/models/schemas/: user.py
app/models/schemas/validators/: __init__.py
app/providers/: database.py  keys.py  mail.py  redis.py
app/providers/keys/: __init__.py
app/tasks/: __init__.py
migrations/: 2020_04_25_042319_create_users_table.py  2020_04_27_180839_alter_users_table.py  2020_05_03_230830_add_user_active_attribute.py
tests/: conftest.py  test_app.py  test_helpers.py  test_routes.py  test_tasks.py
