[tool.poetry]
name = "service_api"
version = "0.1.0"
description = "Simple service orders management API"
authors = ["Isaque Alves <isaquealves@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
